# MyUtility

./: .gitignore  ExAcpt.cxx  ExAcpt.h  ExEmbedEvent.cxx  ExEmbedEvent.h  ExEvent.cxx  ExEvent.h  ExEventV1.cxx  ExEventV1.h  ExEventV2.cxx  ExEventV2.h  ExGeomToKey.cxx  ExGeomToKey.h  ExHitList.cxx  ExHitList.h  ExMiniClusters.cxx  ExMiniClusters.h  ExPrimParticle.cxx  ExPrimParticle.h  ExShowerV1.cxx  ExShowerV1.h  ExShowerV2.cxx  ExShowerV2.h  ExSimEvent.cxx  ExSimEvent.h  ExSimEventV1.cxx  ExSimEventV1.h  ExSimEventV2.cxx  ExSimEventV2.h  ExSimEventV3.cxx  ExSimEventV3.h  GeantParticleID.h  H5ToRoot.cxx  H5ToRoot.h  JohnCalibrateShowerEnergy.cxx  JohnCalibrateShowerEnergy.h  MActivation.cxx  MActivation.h  MConv.cxx  MConv.h  (+60 more)
Data_File/: ExAcpt_data_file_mpc.txt  ExAcpt_data_file_mpcex.txt  eff_00_07_minipad_all_trigger_no_vtx.txt  eff_00_08_cut_off.txt  eff_all_cut_off.txt  fit_match_landau_all_scale_smear.txt  fit_match_landau_all_scale_smear_1sigma_start.txt  fit_match_landau_all_scale_smear_1sigma_start_based_on_old_cor.txt  fit_match_landau_all_scale_smear_1sigma_start_based_on_old_cor_scale_up_1_1.txt  fit_match_landau_all_scale_smear_first_fix_then_all_free.txt  fit_mip_result_all_trigger_no_vtx_cut.txt  minipad_mip_correction.txt  minipad_mip_correction2.txt  mip_correction_Own.txt  pad_scale_factor_new_include_mpv.txt
ROOTMAP/: generate_rootmap.sh  libMyUtility.rootmap  libWrappers.rootmap  libmpc.rootmap  libmpcex_interface.rootmap
macros/: CheckFirstLayer.C  CompareTwoOutput.C  Ex.h5  Fun4All_ReadSimExDST.C  Print.C  TestConvolve.C  TestDense.C  TestMActivation.C  TestMConv2D.C  TestMConv2DPy.C  TestMConvMPooling.C  TestMFlatten.C  TestMModelV1.C  TestMPooling.C  TestMPreprocess.C  TestMTensor.C  TestNewConv.C  TestReadWeight.C  TestSeriesModel.C  TestToHDF5.C  TestVector.C  VisualExTensor.C  draw_mpcex.C  read_all_weights.C  read_example.C  readweight.C
